fixed gap

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -133,23 +133,32 @@
   #about .section-container {
     flex-direction: column;
     align-items: center;
+    gap: 0;
   }
+  
   .section__pic-container {
     width: 100%;
     max-width: 300px;
+    margin-bottom: 0.25rem; 
   }
+  
   .about-details-container {
     width: 100%;
+    margin-top: 0;
   }
+  
   .about-containers {
     flex-direction: column;
     align-items: center;
-    gap: 1rem;
+    gap: 1rem; 
+    margin-top: 0;
   }
+  
   .details-container {
     width: 100%;
     max-width: 500px;
-    margin-bottom: 0.25rem;
+    margin-bottom: 0.15rem; 
+    padding: 0.5rem; 
   }
   .text-container {
     width: 100%;
